--- a/desktop.ini
+++ b/desktop.ini
@@ -3,3 +3,8 @@ _indexpaulo.html=@_indexpaulo,0
 script.js=@script.js,0
 stylespaulo.css=@stylespaulo,0
 Captura de tela 2025-01-22 111711.png=@Captura de tela 2025-01-22 111711,0
+Captura de tela 2025-01-23 103447.png=@Captura de tela 2025-01-23 103447,0
+Captura de tela 2025-01-23 103954.png=@Captura de tela 2025-01-23 103954,0
+Captura de tela 2025-01-23 105829.png=@Captura de tela 2025-01-23 105829,0
+Captura de tela 2025-01-23 105849.png=@Captura de tela 2025-01-23 105849,0
+Captura de tela 2025-01-23 105909.png=@Captura de tela 2025-01-23 105909,0
