--- a/docs/imagen/desktop.ini
+++ b/docs/imagen/desktop.ini
@@ -1,2 +1,7 @@
 [LocalizedFileNames]
 Captura de tela 2025-01-22 111711.png=@Captura de tela 2025-01-22 111711,0
+Captura de tela 2025-01-23 103447.png=@Captura de tela 2025-01-23 103447,0
+Captura de tela 2025-01-23 103954.png=@Captura de tela 2025-01-23 103954,0
+Captura de tela 2025-01-23 105829.png=@Captura de tela 2025-01-23 105829,0
+Captura de tela 2025-01-23 105849.png=@Captura de tela 2025-01-23 105849,0
+Captura de tela 2025-01-23 105909.png=@Captura de tela 2025-01-23 105909,0
